# AccessCheckCLI

./: .gitignore  README.md  Solution.md  accesscheckcli.toml  pyproject.toml  report.html  smoke_report.html  smoke_test.py
src/: __init__.py  cli.py  dom_parser.py  fetcher.py  models.py  reporter.py  rule_engine.py
src/rules/: __init__.py  rule_1_1_1_alt_text.py  rule_1_3_1_tables.py  rule_1_3_5_input_purpose.py  rule_2_4_1_bypass_blocks.py  rule_2_4_2_page_titled.py  rule_2_4_4_link_purpose.py  rule_2_4_6_heading_hierarchy.py  rule_3_1_1_language.py  rule_4_1_1_1_parsing.py  rule_4_1_2_form_labels.py
src/templates/: report.html.j2
tests/: test_dom_parser.py  test_fetcher.py  test_models.py  test_reporter.py  test_rule_engine.py
tests/rules/: test_rule_1_1_1.py  test_rule_1_3_1.py  test_rule_2_4_1.py  test_rule_2_4_2.py  test_rule_2_4_4.py  test_rule_2_4_6.py  test_rule_3_1_1.py  test_rule_4_1_2.py
