[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "accesscheck-cli"
version = "0.1.0"
description = "WCAG 2.1 Website Accessibility Auditor — zero-config CLI for front-end developers and QA engineers"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["accessibility", "wcag", "a11y", "cli", "audit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "jinja2>=3.1",
]

[project.optional-dependencies]
js  = ["playwright>=1.44"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-httpx>=0.30",
    "respx>=0.21",
]

[project.scripts]
accesscheck = "src.cli:main"

[project.urls]
Homepage   = "https://github.com/dfigurado/accessibility-cli"
Repository = "https://github.com/dfigurado/accessibility-cli"
Issues     = "https://github.com/dfigurado/accessibility-cli/issues"

[tool.setuptools.packages.find]
where   = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths    = ["tests"]
addopts      = "--cov=src --cov-report=term-missing"